feat: :sparkles: Реализовал ендпоинты для customers
