# app/Http/ApiV1/Customers/Resources/CustomerJsonResource.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Http\ApiV1\Customers\Resources;
+
+use App\Http\ApiV1\Addresses\Resources\AddressSubResource;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class CustomerJsonResource extends JsonResource
+{
+    public function toArray($request)
+    {
+        $toReturn = [
+            'id' => $this->id,
+            'name' => $this->name
+        ];
+
+        if(str_contains($request->include, 'addresses'))
+        {
+            $addresses = [];
+
+            foreach ($this->addresses as $address)
+                $addresses[] = new AddressSubResource($address);
+
+            $toReturn['addresses'] = $addresses;
+        }
+
+        if(str_contains($request->include, 'orders'))
+        {
+            $orders = [];
+
+            foreach ($this->orders as $order)
+                $orders[] = new AddressSubResource($order);
+
+            $toReturn['orders'] = $orders;
+        }
+
+        return $toReturn;
+    }
+}
